--- a/charts/dp-core-infrastructure/charts/haproxy/values.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/values.yaml
@@ -17,15 +17,15 @@
 
 podSecurityPolicy:
   annotations: {}
-    ## Specify pod annotations
-    ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
-    ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
-    ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
-    ##
-    # apparmor.security.beta.kubernetes.io/allowedProfileNames: runtime/default
-    # apparmor.security.beta.kubernetes.io/defaultProfileName: runtime/default
-    # seccomp.security.alpha.kubernetes.io/allowedProfileNames: runtime/default
-    # seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
+  ## Specify pod annotations
+  ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
+  ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
+  ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
+  ##
+  # apparmor.security.beta.kubernetes.io/allowedProfileNames: runtime/default
+  # apparmor.security.beta.kubernetes.io/defaultProfileName: runtime/default
+  # seccomp.security.alpha.kubernetes.io/allowedProfileNames: runtime/default
+  # seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
   enabled: false
 
 ## Enable RBAC Authorization
@@ -60,14 +60,14 @@ aws:
 controller:
   name: controller
   image:
-    repository: infra-haproxytech-kubernetes-ingress    # can be changed to use CE or EE Controller images
+    repository: haproxytech-kubernetes-ingress # can be changed to use CE or EE Controller images
     tag: "{{ .Chart.AppVersion }}"
     pullPolicy: IfNotPresent
 
   ## Deployment or DaemonSet pod mode
   ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
   ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
-  kind: Deployment    # can be 'Deployment' or 'DaemonSet'
+  kind: Deployment # can be 'Deployment' or 'DaemonSet'
   replicaCount: 1
 
   ## minReadySeconds setting of Deployment or DaemonSet
@@ -77,11 +77,6 @@ controller:
   ## Running container without root privileges
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
   unprivileged: true
-
-  ## Allow privileged port binding without root privileges
-  ## ref: https://kubernetes.io/docs/tasks/administer-cluster/sysctl-cluster/
-  ## Note: this feature enables net.ipv4.ip_unprivileged_port_start=0 sysctl when running in unprivileged mode
-  allowPrivilegedPorts: false
 
   ## Restricts container syscalls
   ## ref: https://kubernetes.io/docs/tutorials/security/seccomp/
@@ -166,14 +161,14 @@ controller:
   # ref: https://kubernetes.io/docs/concepts/services-networking/ingress/#default-ingress-class
   # Note: Uses ingressClass as name for the Ingress Class object if enabled
   ingressClassResource:
-    name: haproxy
+    name: hapoxy
     default: false
     parameters: {}
 
   # k8s < 1.18: Ingress Class used, in multi-ingress environments, for ingress.class annotation to select ingress resources to implement.
   # k8s >= 1.18: Ingress Class used to target specific HAProxy Ingress Controller in multi-ingress envionments
   # ref: https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/#using-multiple-ingress-controllers
-  ingressClass: haproxy   # typically "haproxy" or null to receive all events
+  ingressClass: haproxy #TODO   typically "haproxy" or null to receive all events
 
   # Gateway API controller, not available in K8s as default but can be installed
   # ref: https://gateway-api.sigs.k8s.io/
@@ -215,11 +210,11 @@ controller:
   ## ref: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/
   resources:
     limits:
-      cpu: 500m
-      memory: 512Mi
+      cpu: 250m
+      memory: 1024Mi
     requests:
-      cpu: 100m
-      memory: 256Mi
+      cpu: 250m
+      memory: 768Mi
 
   ## Horizontal Pod Scaler
   ## Only to be used with Deployment kind
@@ -319,7 +314,6 @@ controller:
   ## Additional command line arguments to pass to Controller
   ## ref: https://github.com/haproxytech/kubernetes-ingress/blob/master/documentation/controller.md
   extraArgs: []
-  #  - --namespace-whitelist=default
   #  - --namespace-whitelist=namespace1
   #  - --namespace-blacklist=namespace2
   #  - --disable-ipv4
@@ -345,8 +339,6 @@ controller:
   #   annotationKey: value
 
   ## Controller Logging configuration
-  ## Careful: this block will be ignored if you use config.cr-global.
-  ## In this case, move your logging config in entry spec.log_targets in your CR.
   logging:
     ## Controller logging level
     ## This only relevant to Controller logs
@@ -355,9 +347,9 @@ controller:
     ## HAProxy traffic logs
     ## ref: https://github.com/haproxytech/kubernetes-ingress/tree/master/documentation#logging
     traffic: {}
-      #      address:  "stdout"
-      #      format:   "raw"
-      #      facility: "daemon"
+    #      address:  "stdout"
+    #      format:   "raw"
+    #      facility: "daemon"
 
   ## Mirrors the address of the service's endpoints to the
   ## load-balancer status of all Ingress objects it satisfies.
@@ -371,9 +363,9 @@ controller:
   ## Controller Service configuration
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/
   service:
-    enabled: true     # set to false when controller.kind is 'DaemonSet' and controller.daemonset.useHostPorts is true
+    enabled: true # set to false when controller.kind is 'DaemonSet' and controller.daemonset.useHostPorts is true
 
-    type: NodePort   # can be 'ClusterIP', 'NodePort' or 'LoadBalancer'
+    type: NodePort # can be 'ClusterIP', 'NodePort' or 'LoadBalancer'
 
     ## Service annotations
     ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
@@ -470,7 +462,7 @@ controller:
     ## Controller Metrics Service configuration
     ## ref: https://kubernetes.io/docs/concepts/services-networking/service/
     metrics:
-      type: ClusterIP    # can be 'ClusterIP', 'NodePort' or 'LoadBalancer'
+      type: ClusterIP # can be 'ClusterIP', 'NodePort' or 'LoadBalancer'
 
       ## Service annotations
       ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
@@ -483,7 +475,7 @@ controller:
   ## Controller DaemonSet configuration
   ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
   daemonset:
-    useHostNetwork: false  # also modify dnsPolicy accordingly
+    useHostNetwork: false # also modify dnsPolicy accordingly
     useHostPort: false
     hostIP: null
     hostPorts:
@@ -508,44 +500,40 @@ controller:
   ## Controller container lifecycle handlers
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/attach-handler-lifecycle-event/
   lifecycle: {}
-    ## Example preStop for graceful shutdown
-    # preStop:
-    #   exec:
-    #     command: ["/bin/sh", "-c", "kill -USR1 $(pidof haproxy); while killall -0 haproxy; do sleep 1; done"]
+  ## Example preStop for graceful shutdown
+  # preStop:
+  #   exec:
+  #     command: ["/bin/sh", "-c", "kill -USR1 $(pidof haproxy); while killall -0 haproxy; do sleep 1; done"]
 
   ## Set additional environment variables
   extraEnvs: []
-    ## Set TZ env to configure timezone on controller containers
-    # - name: TZ
-    #   value: "Etc/UTC"
+  ## Set TZ env to configure timezone on controller containers
+  # - name: TZ
+  #   value: "Etc/UTC"
 
   ## Add additional containers
   extraContainers: []
-    ## Example sidecar
-    # - name: sidecar
-    #   image: alpine # alpine is a simple Linux OS image
-    #   command: ["/bin/sh"]
-    #   args: ["-c", "while true; do date; sleep 5;done"]
+  ## Example sidecar
+  # - name: sidecar
+  #   image: alpine # alpine is a simple Linux OS image
+  #   command: ["/bin/sh"]
+  #   args: ["-c", "while true; do date; sleep 5;done"]
 
   ## Additional volumeMounts to the controller main container
-  extraVolumeMounts: []
-    ## Example empty volume mounts when using securityContext->readOnlyRootFilesystem
-    # - name: etc-haproxy
-    #   mountPath: /etc/haproxy
-    # - name: tmp
-    #   mountPath: /tmp
-    # - name: var-state-haproxy
-    #   mountPath: /var/state/haproxy
+  extraVolumeMounts: 
+  ## Example empty volume mounts when using securityContext->readOnlyRootFilesystem
+   - name: etc-haproxy
+     mountPath: /etc/haproxy
+   - name: var-state-haproxy
+     mountPath: /var/state/haproxy
 
   ## Additional volumes to the controller pod
-  extraVolumes: []
-    ## Example empty volumes when using securityContext->readOnlyRootFilesystem
-    # - name: etc-haproxy
-    #   emptyDir: {}
-    # - name: tmp
-    #   emptyDir: {}
-    # - name: var-state-haproxy
-    #   emptyDir: {}
+  extraVolumes: 
+  ## Example empty volumes when using securityContext->readOnlyRootFilesystem
+   - name: etc-haproxy
+     emptyDir: {}
+   - name: var-state-haproxy
+     emptyDir: {}
 
   ## ServiceMonitor
   ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/user-guides/getting-started.md
@@ -563,21 +551,12 @@ controller:
     ## Specify the endpoints
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/design.md#servicemonitor
     endpoints:
-      - port: stat
-        path: /metrics
-        scheme: http
-        interval: 30s
+    - port: stat
+      path: /metrics
+      scheme: http
+      interval: 30s
 
-  ## Controller sync mode with Kubernetes
-  ## Note: requires Enterprise Kubernetes Ingress Controller
-  ## Possible values: 'default' or 'fetch'
-  ## - 'default': the sync is done based on K8s informers (event based)
-  ## - 'fetch':  the controller pulls data periodically (from K8s or from proxy)
-  sync:
-    mode: default                                       # can be 'default' or 'fetch'
-    fetchParams:                                        # Mandatory if mode is 'fetch'
-      # period: 3s                                      # optional, default is 5s
-      source: k8s                                       # possible values are: 'proxy', 'k8s'
-    proxyParams:                                        # Mandatory if source is 'proxy'
-      replicaCount: 3                                   # number of replicas of the proxy, mandatory if source is 'proxy'
-      proxySvcLabelSelector: run:haproxy-ingress-proxy  # label selector of the proxy service, mandatory if source is 'proxy'
+  ## Techdump
+  ## Toggle to add the RBAC permissions needed for the techdump tool.
+  techdump:
+    enabled: false
