test readonly attempt 1
# Conflicts:
#	charts/artifactmanager/Chart.yaml
#	charts/bwprovisioner/Chart.yaml
#	charts/dp-core-infrastructure/Chart.yaml
#	charts/flogoprovisioner/Chart.yaml
#	charts/jaeger/Chart.yaml
#	charts/msg-ems-tp/Chart.yaml
#	charts/msg-pulsar-tp/Chart.yaml
#	charts/o11y-service/Chart.yaml
#	charts/oauth2-proxy-manifests/Chart.yaml
#	charts/oauth2-proxy-recipes/Chart.yaml
#	charts/opentelemetry-collector/Chart.yaml
#	charts/platform-bootstrap/Chart.yaml
#	charts/tibco-developer-hub/Chart.yaml
#	charts/tp-cp-bootstrap/Chart.yaml
#	charts/tp-cp-bwce-recipes/Chart.yaml
#	charts/tp-cp-bwce-utilities/Chart.yaml
#	charts/tp-cp-configuration/Chart.yaml
#	charts/tp-cp-core-finops/Chart.yaml
#	charts/tp-cp-core-ops/Chart.yaml
#	charts/tp-cp-core/Chart.yaml
#	charts/tp-cp-flogo-recipes/Chart.yaml
#	charts/tp-cp-flogo-utilities/Chart.yaml
#	charts/tp-cp-hawk/Chart.yaml
#	charts/tp-cp-infra-recipes/Chart.yaml
#	charts/tp-cp-integration-bw5/Chart.yaml
#	charts/tp-cp-integration-bwce/charts/bw-webserver/Chart.yaml
#	charts/tp-cp-integration-common/charts/fileserver/Chart.yaml
#	charts/tp-cp-integration-flogo/Chart.yaml
#	charts/tp-cp-msg-contrib/Chart.yaml
#	charts/tp-cp-o11y/Chart.yaml
#	charts/tp-cp-proxy/Chart.yaml
#	charts/tp-cp-servicemesh-recipes/Chart.yaml
#	charts/tp-cp-tibcohub-contrib/Chart.yaml
#	charts/tp-cp-tibcohub-recipes/Chart.yaml
#	charts/tp-dp-monitor-agent/Chart.yaml

--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/deployment.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/deployment.yaml
@@ -90,6 +90,9 @@ spec:
           timeoutSeconds: 5
           initialDelaySeconds: 10
           periodSeconds: 10
+        volumeMounts:
+          - name: tmp
+            mountPath: /tmp
 {{- if .Values.global.logging.fluentbit.enabled }}
       - name: fluentbit
         image: {{ include "tp-provisioner-agent.image.registry" .}}{{"/"}}{{ include "tp-provisioner-agent.image.repository" .}}{{"/"}}common-fluentbit:{{ .Values.fluentbit.image.tag }}
@@ -134,6 +137,8 @@ spec:
             mountPath: /fluent-bit/etc/
 {{- end }}
       volumes:
+        - name: tmp
+          emptyDir: {}
 {{- if .Values.global.logging.fluentbit.enabled }}
         - name: podlogs
           hostPath:
