--- a/charts/tp-cp-core-finops/values.yaml
+++ b/charts/tp-cp-core-finops/values.yaml
@@ -32,6 +32,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     finopsJob:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
