--- a/charts/tp-cp-core/charts/admin-webserver/values.yaml
+++ b/charts/tp-cp-core/charts/admin-webserver/values.yaml
@@ -45,6 +45,7 @@ global:
       # It specifies that privilege escalation is not allowed for security reasons.
       # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -59,6 +60,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
