--- a/charts/artifactmanager/values.yaml
+++ b/charts/artifactmanager/values.yaml
@@ -49,6 +49,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
@@ -119,6 +120,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   artifactManager:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
