--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/values.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/values.yaml
@@ -60,6 +60,7 @@ global:
         runAsNonRoot: false
         runAsUser: 0
         allowPrivilegeEscalation: false
+        readOnlyRootFilesystem: true
         capabilities:
           drop:
             - ALL
@@ -107,6 +108,7 @@ securityContext:
   # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
   provisionerAgent:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
