--- a/charts/flogoprovisioner/values.yaml
+++ b/charts/flogoprovisioner/values.yaml
@@ -48,6 +48,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
@@ -118,6 +119,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   flogoprovisioner:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
