--- a/charts/oauth2-proxy-manifests/values.yaml
+++ b/charts/oauth2-proxy-manifests/values.yaml
@@ -486,6 +486,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
