--- a/charts/tibco-developer-hub/values.yaml
+++ b/charts/tibco-developer-hub/values.yaml
@@ -206,6 +206,7 @@ backstage:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   containerSecurityContext:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
@@ -366,6 +367,7 @@ postgresql:
       runAsUser: 1001
       runAsGroup: 0   # see https://github.com/bitnami/charts/issues/13985#issuecomment-1411654273
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -440,6 +442,7 @@ fluentbit:
     runAsNonRoot: false
     runAsUser: 0
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
