--- a/charts/tp-cp-bootstrap/charts/resource-set-operator/values.yaml
+++ b/charts/tp-cp-bootstrap/charts/resource-set-operator/values.yaml
@@ -52,6 +52,7 @@ securityContext:
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   resourceSetOperator:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
@@ -84,6 +85,7 @@ global:
           runAsNonRoot: false
           runAsUser: 0
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
