--- a/charts/tp-cp-core/charts/cronjobs/values.yaml
+++ b/charts/tp-cp-core/charts/cronjobs/values.yaml
@@ -41,6 +41,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     cronjobs:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
             - ALL
@@ -54,6 +55,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
