--- a/charts/tp-cp-core/charts/email-service/values.yaml
+++ b/charts/tp-cp-core/charts/email-service/values.yaml
@@ -53,6 +53,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     emailService:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -67,6 +68,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
