--- a/charts/tp-cp-core/charts/orchestrator/values.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/values.yaml
@@ -48,6 +48,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     orchestrator:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
           drop:
             - ALL
@@ -62,6 +63,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
