--- a/charts/tp-cp-core/charts/user-subscriptions/values.yaml
+++ b/charts/tp-cp-core/charts/user-subscriptions/values.yaml
@@ -46,6 +46,7 @@ global:
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
     userSub:
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -60,6 +61,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
