--- a/charts/tp-cp-integration-bwce/charts/bw-webserver/values.yaml
+++ b/charts/tp-cp-integration-bwce/charts/bw-webserver/values.yaml
@@ -31,6 +31,7 @@ global:
       runAsNonRoot: false
       runAsUser: 0
       allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
       capabilities:
         drop:
           - ALL
@@ -74,6 +75,7 @@ securityContext:
   # It specifies that privilege escalation is not allowed for security reasons.
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
   capabilities:
     drop:
       - ALL
