update job to us readOnlyRootFilesystem = true
# Conflicts:
#	charts/tp-cp-proxy/Chart.yaml
#	charts/tp-cp-proxy/templates/jobs.yaml

--- a/charts/tp-cp-proxy/templates/jobs.yaml
+++ b/charts/tp-cp-proxy/templates/jobs.yaml
@@ -119,5 +119,7 @@ spec:
               value: {{ .noProxy | quote }}
             {{- end }}          
             {{- end }}
+          securityContext:
+            readOnlyRootFilesystem: true
       imagePullSecrets:
         - name: {{ .Values.global.cp.containerRegistry.secret }} {{/* optional imagePullSecret for private repo. no op if secret does not exist */}}
