--- a/charts/flogoprovisioner/templates/deployment.yaml
+++ b/charts/flogoprovisioner/templates/deployment.yaml
@@ -148,6 +148,9 @@ spec:
                   name: {{ include "flogoprovisioner.o11yservice.configmap" . }}
                   key: otel-recvservice-port
                   optional: true
+          volumeMounts:
+          - name: tmp
+            mountPath: /tmp
         {{- if .Values.global.cp.logging.fluentbit.enabled }}
         - name: fluent-bit
           image: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.appinit.image.repository" .}}{{"/"}}common-fluentbit:{{ .Values.global.cp.logging.fluentbit.image.tag }}
@@ -181,8 +184,10 @@ spec:
             - name: fluent-bit-config
               mountPath: /fluent-bit/etc/
         {{- end }}
-      {{- if .Values.global.cp.logging.fluentbit.enabled }}
       volumes:
+        - name: tmp
+          emptyDir: {}
+      {{- if .Values.global.cp.logging.fluentbit.enabled }}
         - name: podlogs
           hostPath:
             path: /var/log/pods
