FLOGO-14091: fix container security context for flogo provisioner

--- a/charts/tp-cp-flogo-recipes/Chart.yaml
+++ b/charts/tp-cp-flogo-recipes/Chart.yaml
@@ -6,8 +6,8 @@ apiVersion: v2
 name: tp-cp-flogo-recipes
 description: TIBCO Platform Flogo Data Plane recipes
 type: application
-version: 1.3.26
-appVersion: "1.3.0"
+version: 1.3.29
+appVersion: "1.3.0+HF1"
 keywords:
   - tibco-platform
   - control-plane
